# dot-files

./: README.md
Desktop/Shader/: main.c  shader.glsl  video_player.c  video_shader.glsl
Desktop/guitar/: CMakeLists.txt  README.md  build.bat  build.sh  build_3d.bat  build_3d.sh
Desktop/guitar/shaders/: fragment.glsl
Desktop/guitar/src/: AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  GLBLoader.cpp  GLBLoader.h  Guitar.cpp  Guitar.h  Guitar3D.cpp  Guitar3D.h  main.cpp
